--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo list app - TypeScript</title>
+    <title>YouType</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/main.scss" />
   </head>
@@ -16,13 +16,8 @@
       <!-- App heading -->
       <div class="app__heading heading">
         <h1 class="heading__title">
-          <strong>Todo list with TypeScript</strong>
+          <strong>Your Checklist - Your Day</strong>
         </h1>
-        <p class="heading__description">
-          <a href="https://github.com/cunguyendev/todo-list-typescript" title="View on Github" target="_blank">
-            https://github.com/cunguyendev/todo-list-typescript
-          </a>
-        </p>
       </div>
 
       <!-- Todo app -->
