--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sticky</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/main.scss" />
   </head>
   <body>
@@ -16,7 +16,7 @@
       <!-- App heading -->
       <div class="app__heading heading">
         <h1 class="heading__title">
-          <strong>Your Checklist - Your Day</strong>
+          <strong>Sticky - Your Checklist</strong>
         </h1>
       </div>
 
